--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="title_activity_cinco">CincoActivity</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_millionaire">MillionaireActivity</string>
+    <string name="telefone">Telefone</string>
+    <string name="publico">Público</string>
+    <string name="cinco_cinco">50:50</string>
+
+    <string name="toast_game_over">Game Over</string>
 </resources>
