--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,11 @@
     <string name="cinco_cinco">50:50</string>
 
     <string name="toast_game_over">Game Over</string>
+    <string name="toast_game_on">Acertou!</string>
+    <string name="toast_final">Parabéns! Ganhou 100,000€!</string>
+    <string name="toast_game_on_5">Ganhou 500€!</string>
+    <string name="toast_game_on_10">Ganhou 4000€!</string>
+    <string name="toast_game_over_5">Game Over! Ganhou 500€!</string>
+    <string name="toast_game_over_10">Game Over! Ganhou 4000€!</string>
+    <string name="action_cinco">50:50</string>
 </resources>
