--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="toast_game_over_10">Game Over! Ganhou 4000€!</string>
     <string name="action_cinco">50:50</string>
     <string name="title_activity_publico">PublicoActivity</string>
+    <string name="ok">Ok</string>
 </resources>
